--- a/development/index.html
+++ b/development/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Zaplanuj Jedzonko</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -24,7 +25,7 @@
       <!-- newsletter -->
     </section>
     <section>
-      <!-- aobut me -->
+      <!-- about me -->
     </section>
     <section>
       <!-- three columns -->
