--- a/development/index.html
+++ b/development/index.html
@@ -10,12 +10,33 @@
   </head>
   <body>
     <header>
-      <h1>ZaplanujJedzonko.pl</h1>
+      <div class="container">
+        <h1 class="logo"><span>Zaplanuj</span> Jedzonko</h1>
+        <div class="headerList">
+          <a href="app.html">Zaplanuj posiłki!</a>
+          <a href="#why">Dlaczego warto?</a>
+          <a href="#aboutMe">O mnie</a>
+          <a href="#footer">Kontakt</a>
+        </div>
+      </div>
     </header>
-    <section>
-      <!-- carousel -->
+    <section class="carousel">
+      <i id="arrowLeft" class="fas fa-chevron-left"></i>
+      <div class="slide slide1">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <div>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+      </div>
+      <div class="slide slide2">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <div>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+      </div>
+      <div class="slide slide3">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <div>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+      </div>
+      <i id="arrowRight" class="fas fa-chevron-right"></i>
     </section>
-    <section>
+    <section id="why">
       <!-- CTA + button -->
     </section>
     <section>
@@ -24,13 +45,13 @@
     <section>
       <!-- newsletter -->
     </section>
-    <section>
+    <section id="aboutMe">
       <!-- about me -->
     </section>
     <section>
       <!-- three columns -->
     </section>
-    <footer>
+    <footer id="footer">
       <!-- copyright -->
     </footer>
 
