--- a/development/index.html
+++ b/development/index.html
@@ -22,15 +22,15 @@
     </header>
     <section class="carousel">
       <i id="arrowLeft" class="fas fa-chevron-left"></i>
-      <div class="slide slide1">
+      <div class="slide">
         <h2>Lorem ipsum dolor sit amet</h2>
         <div>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
       </div>
-      <div class="slide slide2">
+      <div class="slide">
         <h2>Lorem ipsum dolor sit amet</h2>
         <div>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
       </div>
-      <div class="slide slide3">
+      <div class="slide">
         <h2>Lorem ipsum dolor sit amet</h2>
         <div>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
       </div>
