--- a/development/app.html
+++ b/development/app.html
@@ -8,9 +8,33 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header>
-      <h1>Hello App!</h1>
+    <header class="headerApp">
+      <div class="container">
+        <h1 class="logo"><a href="index.html"><span>Zaplanuj</span> Jedzonko</a></h1>
+        <div class="person">
+          <div class="name">Imię</div>
+          <i class="far fa-user-circle"></i>
+        </div>
+      </div>
     </header>
+
+    <section class="dashboard">
+      <div class="panelApp">
+        <div class="pulpit">
+          <h2></h2>
+        </div>
+        <div class="przepisy">
+          <h2></h2>
+        </div>
+        <div class="plany">
+          <h2></h2>
+        </div>
+      </div>
+      <div>
+        <div></div>
+      </div>
+
+    </section>
 
     <script src="./js/app.js"></script>
   </body>
