Widok główny aplikacji zrobiony

--- a/development/app.html
+++ b/development/app.html
@@ -21,16 +21,19 @@
     <section class="dashboard">
       <div class="panelApp">
         <div class="pulpit">
-          <h2></h2>
+          <h2>Pulpit</h2>
+          <i class="fas fa-chevron-right"></i>
         </div>
         <div class="przepisy">
-          <h2></h2>
+          <h2>Przepisy</h2>
+          <i class="fas fa-chevron-right"></i>
         </div>
         <div class="plany">
-          <h2></h2>
+          <h2>Plany</h2>
+          <i class="fas fa-chevron-right"></i>
         </div>
       </div>
-      <div>
+      <div class="screen">
         <div></div>
       </div>
 
