--- a/development/index.html
+++ b/development/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="CTA-button">
           <button class="CTA_btns">
-            <a href="index.html">Lorem ipsum</a>
+            <a href="app.html">Lorem ipsum</a>
           </button>
         </div>
       </div>
