Zrobino menu i widgety

--- a/development/app.html
+++ b/development/app.html
@@ -34,9 +34,52 @@
         </div>
       </div>
       <div class="screen">
-        <div></div>
+        <div class="firstTime"></div>
+        <div class="anotherTime">
+          <div class="container">
+            <div class="top">
+              <div class="addRecipe">
+                <i class="far fa-plus-square"></i>
+                <p>dodaj przepis</p>
+              </div>
+              <div class="addPlan">
+                <i class="far fa-plus-square"></i>
+                <p>dodaj plan</p>
+              </div>
+              <div class="alerts">
+                <div class="alertRecipes">
+                  <i class="fas fa-info-circle"></i>
+                  <p>Masz już 99 przepisów, nieźle!</p>
+                  <div class="times">
+                    <i class="fas fa-times"></i>
+                  </div>
+                </div>
+                <div class="alertPlan">
+                  <i class="fas fa-exclamation-circle"></i>
+                  <p>Pamiętaj, aby dodać plan!</p>
+                  <div class="times">
+                    <i class="fas fa-times"></i>
+                  </div>
+                </div>
+                <div class="alertGood">
+                  <i class="fas fa-check-circle"></i>
+                  <p>Świetnie że jesteś! Udanego planowania i smaczego! :)</p>
+                  <div class="times">
+                    <i class="fas fa-times"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="bottom">
+              <div class="plan">
+                <h2>Twój plan na <span>{nr_tygodnia}</span> tydzień:</h2>
+                <div class="days">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-
     </section>
 
     <script src="./js/app.js"></script>
