--- a/development/app.html
+++ b/development/app.html
@@ -72,8 +72,72 @@
             </div>
             <div class="bottom">
               <div class="plan">
-                <h2>Twój plan na <span>{nr_tygodnia}</span> tydzień:</h2>
+                <div class="planTitle">
+                  <h2>Twój plan na <span>{nr_tygodnia}</span> tydzień:</h2>
+                </div>
                 <div class="days">
+                  <p>Poniedziałek</p>
+                  <p>Wtorek</p>
+                  <p>Środa</p>
+                  <p>Czwartek</p>
+                  <p>Piątek</p>
+                  <p>Sobota</p>
+                  <p>Niedziela</p>
+                </div>
+                <div class="breakfast">
+                  <p>śniadanie</p>
+                  <p>śniadanie</p>
+                  <p>śniadanie</p>
+                  <p>śniadanie</p>
+                  <p>śniadanie</p>
+                  <p>śniadanie</p>
+                  <p>śniadanie</p>
+                </div>
+                <div class="secondBreakfast">
+                  <p>drugie śniadanie</p>
+                  <p>drugie śniadanie</p>
+                  <p>drugie śniadanie</p>
+                  <p>drugie śniadanie</p>
+                  <p>drugie śniadanie</p>
+                  <p>drugie śniadanie</p>
+                  <p>drugie śniadanie</p>
+                </div>
+                <div class="soup">
+                  <p>zupa</p>
+                  <p>zupa</p>
+                  <p>zupa</p>
+                  <p>zupa</p>
+                  <p>zupa</p>
+                  <p>zupa</p>
+                  <p>zupa</p>
+                </div>
+                <div class="secondMeal">
+                  <p>drugie<br>danie</p>
+                  <p>drugie<br>danie</p>
+                  <p>drugie<br>danie</p>
+                  <p>drugie<br>danie</p>
+                  <p>drugie<br>danie</p>
+                  <p>drugie<br>danie</p>
+                  <p>drugie<br>danie</p>
+                </div>
+                <div class="diner">
+                  <p>kolacja</p>
+                  <p>kolacja</p>
+                  <p>kolacja</p>
+                  <p>kolacja</p>
+                  <p>kolacja</p>
+                  <p>kolacja</p>
+                  <p>kolacja</p>
+                </div>
+              </div>
+              <div class="prevNext">
+                <div class="prev">
+                  <i class="fas fa-angle-double-left"></i>
+                  <p>poprzedni</p>
+                </div>
+                <div class="next">
+                  <p>następny</p>
+                  <i class="fas fa-angle-double-right"></i>
                 </div>
               </div>
             </div>
