dodano strone powitalna w aplikacji oraz dodano event na przycisku gotowe

--- a/development/app.html
+++ b/development/app.html
@@ -30,8 +30,26 @@
           <h2></h2>
         </div>
       </div>
-      <div>
-        <div></div>
+      <div class="content">
+        <div class="white-screen">
+          <div class="message-and-form">
+            <div class="message">
+              <h3>Witaj,</h3>
+              <p>
+                wygląda na to, że jesteś tutaj pierwszy raz!
+              </p>
+            </div>
+            <form>
+                <input id="newUser" type="text" size="20" placeholder="tutaj wpisz jak masz na imię dziku xD"/>
+                <input id="newUserBtn"type="button" name="sendName" value="Gotowe!"/>
+            </form>
+          </div>
+          <div class="text">
+              <p>Podaj nam swoje imię, a my zorganizujemy dla Ciebie naszą aplikację :&rang; </p>
+            </div>
+        </div>
+      </div>
+
       </div>
 
     </section>
