--- a/development/app.html
+++ b/development/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Zaplanuj Jedzonko</title>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/custom.css" />
   </head>
   <body>
     <header class="headerApp">
@@ -20,7 +20,7 @@
 
     <section class="dashboard">
       <div class="panelApp">
-        <div class="pulpit">
+        <div class="pulpit highlight">
           <h2>Pulpit</h2>
           <i class="fas fa-chevron-right"></i>
         </div>
@@ -143,7 +143,11 @@
             </div>
           </div>
         </div>
+        <div class="addPlanSide"></div>
+        <div class="addRecipeSide"></div>
       </div>
+      <div class="recipes"></div>
+      <div class="plans"></div>
     </section>
 
     <script src="./js/app.js"></script>
