stworzono dodawnie przepisu wraz z zastosowaniem local storage do poprawy przyciski dodawnia

--- a/development/app.html
+++ b/development/app.html
@@ -191,7 +191,7 @@
                       <label for="instruction">Instrukcja</label>
                       <div class="instruction-position">
                         <textarea name="instruction" class="instruction" rows="5" maxlength="230"></textarea>
-                        <a>
+                        <a id=step-add-btn>
                           <i class="fas fa-plus-square"></i>
                         </a>
                       </div>
@@ -204,7 +204,7 @@
                       <label for=ingridients>Składniki</label>
                       <div class="ingridients-position">
                         <textarea name="ingridients" class="ingridients" rows=1" maxlength="40"></textarea>
-                        <a>
+                        <a id="ingridient-add-btn">
                           <i class="fas fa-plus-square"></i>
                         </a>
                       </div>
