poprawinie błędu zwiazanego z wyswietlaniem przepisów i planów

--- a/development/app.html
+++ b/development/app.html
@@ -220,10 +220,7 @@
     </div>
 
       <div class="addPlanSide"></div>
-      <div class="addRecipeSide"></div>
-
-
-      <div class="plans"></div>
+      <div id="plans"></div>
   </section>
 
   <script src="./js/app.js"></script>
