--- a/development/app.html
+++ b/development/app.html
@@ -45,7 +45,7 @@
             </p>
           </div>
           <form>
-            <input id="newUser" type="text" size="20" placeholder="tutaj wpisz jak masz na imię dziku xD" />
+            <input id="newUser" type="text" size="20" placeholder="tutaj wpisz jak masz na imię dziku xD" autofocus/>
             <input id="newUserBtn" type="button" name="sendName" value="Gotowe!" />
           </form>
         </div>
@@ -176,7 +176,7 @@
                 <fieldset class="name-description-recipe">
                   <label>
                     <h3>Nazwa przepis</h3>
-                    <input type="text" name="name-recipe" id="name-recipe" size="20" maxlength="50">
+                    <input type="text" name="name-recipe" id="name-recipe" size="20" maxlength="50" autofocus>
                   </label>
                   <label>
                     <h3>Opis przepisu</h3>
@@ -220,6 +220,9 @@
     </div>
 
       <div class="addPlanSide"></div>
+      <div class="addRecipeSide"></div>
+
+
       <div id="plans"></div>
   </section>
 
