--- a/development/app.html
+++ b/development/app.html
@@ -244,7 +244,35 @@
         </div>
       </div>
     </div>
-    <div id="plans"></div>
+    <div id="plans">
+      <div class="content">
+        <div class="container">
+          <div class="plansHeader">
+            <h2>Lista planów</h2>
+            <i class="fas fa-plus-square addPlnBtn"></i>
+          </div>
+          <div class="plansDescription">
+            <h2 class="id">id</h2>
+            <h2 class="nazwa">nazwa</h2>
+            <h2 class="opis">opis</h2>
+            <h2 class="tydzien">tydzień</h2>
+            <h2 class="akcje">akcje</h2>
+          </div>
+          <div class="plansContent">
+            <div class="plan">
+              <div class="planId">1</div>
+              <div class="planName"></div>
+              <div class="planDescription"></div>
+              <div class="planWeek"></div>
+              <div class="planAction">
+                <i class="far fa-edit"></i>
+                <i class="far fa-trash-alt"></i>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
   </section>
 
   <script src="./js/app.js"></script>
