--- a/development/app.html
+++ b/development/app.html
@@ -55,7 +55,6 @@
       </div>
     </div>
     <div class="screen ">
-      <div class="firstTime"></div>
       <div class="anotherTime">
         <div class="container">
           <div class="top">
@@ -187,7 +186,7 @@
                 <div class="instruction-ingridients">
                   <div class="instruction-fullset">
                     <fieldset class=new-recipe-instruction>
-                      <label for="instruction">Instrukcja</label>
+                      <label form="instruction">Instrukcja</label>
                       <div class="instruction-position">
                         <textarea name="instruction" class="instruction" rows="4" maxlength="150"></textarea>
                         <a id=step-add-btn class="btn-add"> 
@@ -200,7 +199,7 @@
                   </div>
                   <div class="ingridients-fullset">
                     <fieldset class="new-recipe-ingridients">
-                      <label for=ingridients>Składniki</label>
+                      <label form=ingridients>Składniki</label>
                       <div class="ingridients-position">
                         <textarea name="ingridients" class="ingridients" rows=1" maxlength="50"></textarea>
                         <a id="ingridient-add-btn" class="btn-add">
@@ -217,12 +216,63 @@
     
         </div>
     </div>
-
-      <div class="addPlanSide"></div>
-      <div class="addRecipeSide"></div>
-
-
-      <div id="plans"></div>
+    <div class="addPlanSide"></div>
+    <div id="recipes">
+      <div class="content">
+        <div class="container">
+          <div class="recipesHeader">
+            <h2>Lista przepisów</h2>
+            <i class="fas fa-plus-square addRcpBtn"></i>
+          </div>
+          <div class="recipesDescription">
+            <h2 class="id">id</h2>
+            <h2 class="nazwa">nazwa</h2>
+            <h2 class="opis">opis</h2>
+            <h2 class="akcje">akcje</h2>
+          </div>
+          <div class="recipesContent">
+            <div class="przepis">
+              <div class="recipeId">1</div>
+              <div class="recipeName"></div>
+              <div class="recipeDescription"></div>
+              <div class="recipeAction">
+                <i class="far fa-edit"></i>
+                <i class="far fa-trash-alt"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="plans">
+      <div class="content">
+        <div class="container">
+          <div class="plansHeader">
+            <h2>Lista planów</h2>
+            <i class="fas fa-plus-square addPlnBtn"></i>
+          </div>
+          <div class="plansDescription">
+            <h2 class="id">id</h2>
+            <h2 class="nazwa">nazwa</h2>
+            <h2 class="opis">opis</h2>
+            <h2 class="tydzien">tydzień</h2>
+            <h2 class="akcje">akcje</h2>
+          </div>
+          <div class="plansContent">
+            <div class="plan">
+              <div class="planId">1</div>
+              <div class="planName"></div>
+              <div class="planDescription"></div>
+              <div class="planWeek"></div>
+              <div class="planAction">
+                <i class="far fa-edit"></i>
+                <i class="far fa-trash-alt"></i>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
   </section>
 
   <script src="./js/app.js"></script>
