Zrobione id przy przepisach i pokazuje w komunikacie ile jest przepisów

--- a/development/app.html
+++ b/development/app.html
@@ -69,7 +69,7 @@
             <div class="alerts">
               <div class="alertRecipes">
                 <i class="fas fa-info-circle"></i>
-                <p>Masz już 99 przepisów, nieźle!</p>
+                <p>Masz już <span id="numRecipes"></span> przepisów, nieźle!</p>
                 <div class="times">
                   <i class="fas fa-times"></i>
                 </div>
