--- a/development/app.html
+++ b/development/app.html
@@ -213,7 +213,6 @@
                 </div>
               </form>
             </div>
-    
         </div>
     </div>
     <div class="addPlanSide"></div>
@@ -273,6 +272,57 @@
           </div>
         </div>
     </div>
+    <div class="addNewPlan">
+      <div class="add-recipes">
+          <div class="white-screen">
+            <form id="new-recipes">
+              <div class="new-recipe-header">
+                <h3>Nowy przepis</h3>
+                <input type="submit" name="add-new-recipe" id="new-recipe-btn" value="Zapisz i zamknij">
+              </div>
+              <fieldset class="name-description-recipe">
+                <label>
+                  <h3>Nazwa przepis</h3>
+                  <input type="text" name="name-recipe" id="name-recipe" size="20" maxlength="50" autofocus>
+                </label>
+                <label>
+                  <h3>Opis przepisu</h3>
+                  <textarea name="discrption-recipe" class="discrption-recipe" rows="5" maxlength="360" cols="30"
+                    rows="10"></textarea>
+                </label>
+              </fieldset>
+              <div class="instruction-ingridients">
+                <div class="instruction-fullset">
+                  <fieldset class=new-recipe-instruction>
+                    <label form="instruction">Instrukcja</label>
+                    <div class="instruction-position">
+                      <textarea name="instruction" class="instruction" rows="4" maxlength="150"></textarea>
+                      <a id=step-add-btn class="btn-add"> 
+                        <i class="fas fa-plus-square"></i>
+                      </a>
+                    </div>
+                  </fieldset>
+                  <ol id="instruction-steps">
+                  </ol>
+                </div>
+                <div class="ingridients-fullset">
+                  <fieldset class="new-recipe-ingridients">
+                    <label form=ingridients>Składniki</label>
+                    <div class="ingridients-position">
+                      <textarea name="ingridients" class="ingridients" rows=1" maxlength="50"></textarea>
+                      <a id="ingridient-add-btn" class="btn-add">
+                        <i class="fas fa-plus-square"></i>
+                      </a>
+                    </div>
+                  </fieldset>
+                  <ul id="list-of-ingridients">
+                  </ul>
+                </div>
+              </div>
+            </form>
+          </div>
+      </div>
+  </div>
   </section>
 
   <script src="./js/app.js"></script>
