--- a/development/app.html
+++ b/development/app.html
@@ -273,56 +273,114 @@
         </div>
     </div>
     <div class="addNewPlan">
-      <div class="add-recipes">
-          <div class="white-screen">
-            <form id="new-recipes">
-              <div class="new-recipe-header">
-                <h3>Nowy przepis</h3>
-                <input type="submit" name="add-new-recipe" id="new-recipe-btn" value="Zapisz i zamknij">
-              </div>
-              <fieldset class="name-description-recipe">
-                <label>
-                  <h3>Nazwa przepis</h3>
-                  <input type="text" name="name-recipe" id="name-recipe" size="20" maxlength="50" autofocus>
-                </label>
-                <label>
-                  <h3>Opis przepisu</h3>
-                  <textarea name="discrption-recipe" class="discrption-recipe" rows="5" maxlength="360" cols="30"
-                    rows="10"></textarea>
-                </label>
-              </fieldset>
-              <div class="instruction-ingridients">
-                <div class="instruction-fullset">
-                  <fieldset class=new-recipe-instruction>
-                    <label form="instruction">Instrukcja</label>
-                    <div class="instruction-position">
-                      <textarea name="instruction" class="instruction" rows="4" maxlength="150"></textarea>
-                      <a id=step-add-btn class="btn-add"> 
-                        <i class="fas fa-plus-square"></i>
-                      </a>
-                    </div>
-                  </fieldset>
-                  <ol id="instruction-steps">
-                  </ol>
+      <div class="add-Plans">
+        <div class="white-screen">
+          <form id="new-plans">
+            <div class="new-plan-header">
+              <h3>Nowy plan</h3>
+              <input type="submit" name="add-new-plan" id="new-plan-btn" value="Zapisz i zamknij">
+            </div>
+            <fieldset class="name-description-plan">
+              <label>
+                <h3>Nazwa przepis</h3>
+                <input type="text" name="name-plan" id="name-plan" size="20" maxlength="50" autofocus>
+              </label>
+              <label>
+                <h3>Opis przepisu</h3>
+                <textarea name="discrption-plan" class="discrption-plan" rows="5" maxlength="360" cols="30"
+                  rows="10"></textarea>
+              </label>
+              <label class="num-week">
+                <h3>Numer tygodnia</h3>
+                <div class="position-week-num">
+                  <input type="text" name="num-of-week" id="num-of-week" value="">
                 </div>
-                <div class="ingridients-fullset">
-                  <fieldset class="new-recipe-ingridients">
-                    <label form=ingridients>Składniki</label>
-                    <div class="ingridients-position">
-                      <textarea name="ingridients" class="ingridients" rows=1" maxlength="50"></textarea>
-                      <a id="ingridient-add-btn" class="btn-add">
-                        <i class="fas fa-plus-square"></i>
-                      </a>
-                    </div>
-                  </fieldset>
-                  <ul id="list-of-ingridients">
-                  </ul>
+              </label>
+            </fieldset>
+
+            <div class="table-plan">
+              <div class="container">
+                <div class="row table-header">
+                  <div class="col-1"></div>
+                  <div class="col-1 meal">
+                   Śniadanie
+                  </div>
+                  <div class="col-1 meal">
+                    Drugie Śniadanie
+                  </div>
+                  <div class="col-1 meal">
+                    Zupa
+                  </div>
+                  <div class="col-1 meal">
+                    Drugie Danie
+                  </div>
+                  <div class="col-1 meal">
+                    Kolacja
+                  </div>
+                </div>
+                <div class="row monday">                
+                  <div class="col-1 day-week">Poniedziałek</div>
+                  <div class="col-1"><select name="" id=""></select></div>
+                  <div class="col-1"><select name="" id=""></select></div>
+                  <div class="col-1"><select name="" id=""></select></div>
+                  <div class="col-1"><select name="" id=""></select></div>
+                  <div class="col-1"><select name="" id=""></select></div>
+                </div>
+                <div class="row tuesday">
+                    <div class="col-1 day-week">Wtorek</div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                </div>
+                <div class="row wednesday">
+                    <div class="col-1 day-week">środa</div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                </div>
+                <div class="row thursday">
+                    <div class="col-1 day-week">czwartek</div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                </div>
+                <div class="row friday">
+                    <div class="col-1 day-week">piątek</div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                </div>
+                <div class="row saturday ">
+                    <div class="col-1 day-week">sobota</div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                </div>
+                <div class="row sunday ">
+                    <div class="col-1 day-week">niedziela</div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                    <div class="col-1"><select name="" id=""></select></div>
+                </div>
                 </div>
               </div>
-            </form>
-          </div>
+            </div>
+          </form>
+        </div>
       </div>
-  </div>
+    </div>
   </section>
 
   <script src="./js/app.js"></script>
