dodano zapisywanie planu do localStorage

--- a/development/app.html
+++ b/development/app.html
@@ -320,59 +320,59 @@
                 </div>
                 <div class="row monday">                
                   <div class="col-1 day-week">Poniedziałek</div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
                 </div>
-                <div class="row tuesday">
+                <div class="row tuesday" id="tuesday">
                   <div class="col-1 day-week">Wtorek</div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
                 </div>
                 <div class="row wednesday">
                   <div class="col-1 day-week">środa</div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
                 </div>
                 <div class="row thursday">
                   <div class="col-1 day-week">czwartek</div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
                 </div>
                 <div class="row friday">
                   <div class="col-1 day-week">piątek</div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
                 </div>
                 <div class="row saturday ">
                   <div class="col-1 day-week">sobota</div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
                 </div>
                 <div class="row sunday ">
                   <div class="col-1 day-week">niedziela</div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
-                  <div class="col-1"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
+                  <div class="col-1 meal"><select class="selectOption"><option>------------</option></select></div>
                 </div>
               </div>
             </div>
